[package]
name = "mandelbulb-web"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.25", features = ["derive"] }
env_logger = "0.11"
flume = "0.12"
log = "0.4"
pollster = "0.4"
wgpu = { version = "29", features = ["webgpu", "webgl"] }
wgpu-types = "29"
nalgebra = "0.34"
eframe = { version = "0.34", features = ["wgpu"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlCanvasElement"] }
